--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="catch_copy_wrap">
                 <p class="catch_copy">今日も、<br>帰りたくなる<br>お家のような<br>お店</p>
-                <img class="catch_copy_back" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/catch%20_copy.png?raw=true" alt="キャッチコピーの背景">
+                <img class="catch_copy_back" url="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/catch%20_copy.png?raw=true" alt="キャッチコピーの背景">
             </div>
 
             <nav class="gnav">
