--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 class="h2_ttl_inner">コンセプト</span></h2>
     </div>
     <div class="concept_text_wrap1">
-        <img src="img/food1_6-100.jpg" alt="ご飯1">
+        <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food1_6-100.jpg?raw=true" alt="ご飯1">
         <div class="concept_text1_right">
             <p class="concept_text">
                 お酒を造る人がいる。<br>
