--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="order1">
             <span>
-                <img class="food2" src="img/food2_2-100.jpg" alt="ご飯2">
+                <img class="food2" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food2_2-100.jpg?raw=true" alt="ご飯2">
             </span>
             <span>
                 <img class="food3" src="img/food3_2-100.jpg" alt="ご飯3">
