--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img class="food2" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food2_2-100.jpg?raw=true" alt="ご飯2">
             </span>
             <span>
-                <img class="food3" src="img/food3_2-100.jpg" alt="ご飯3">
+                <img class="food3" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food3_2-100.jpg?raw=true" alt="ご飯3">
             </span>
         </div>
     </div>
