--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
     <div class="paper_wrap">
         <img class="paper" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_paper.png?raw=true" alt="紙">
-        <img class="paper_vertical" src="/img/menu_paper_vertical.png" alt="紙">
+        <img class="paper_vertical" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_paper_vertical.png?raw=true" alt="紙">
 
         <div class="slider">
             <div class="slider_item">
