--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="slider">
             <div class="slider_item">
-                <img alt="画像" src="/img/menu_drink-100.jpg" />
+                <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text">
                     <p>
                         1CAFE STEENの特製ブレンドのコーヒー。<br>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="slider_item">
-                <img alt="画像" src="/img/menu_drink-100.jpg" />
+                <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text">
                     <p>
                         2CAFE STEENの特製ブレンドのコーヒー。<br>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="slider_item">
-                <img alt="画像" src="/img/menu_drink-100.jpg" />
+                <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text">
                     <p>
                         3CAFE STEENの特製ブレンドのコーヒー。<br>
@@ -136,45 +136,45 @@
         <div class="d-demo__wrap">
             <ul class="d-demo__list d-demo__list--left">
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真" width="200">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真" width="200">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
             </ul>
             <ul class="d-demo__list d-demo__list--left">
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt="スタッフの写真">
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt>
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt>
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt>
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
                 <li class="d-demo__item">
-                    <img src="/img/staff.png" alt>
+                    <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/staff.png?raw=true" alt="スタッフの写真">
                     <p class="staff_name">晴翔</p>
                 </li>
             </ul>
