--- a/index.html
+++ b/index.html
@@ -187,21 +187,21 @@
     <div class="news_wrap">
         <div>
             <a>
-                <img class="blog_photo" src="/img/food4-100.jpg" alt="ブログの画像">
+                <img class="blog_photo" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food4-100.jpg?raw=true" alt="ブログの画像">
                 <p class="news_ttl">2022.1.15/ニュース</p>
                 <p class="news_text">「店主がオススメする日本酒」シリーズ第3段は佐賀特集！「肥前蔵心」「東鶴」「基峰鶴」公開！</p>
             </a>
         </div>
         <div>
             <a>
-                <img class="blog_photo" src="/img/food4-100.jpg" alt="ブログの画像">
+                <img class="blog_photo" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food4-100.jpg?raw=true" alt="ブログの画像">
                 <p class="news_ttl">2022.1.15/ニュース</p>
                 <p class="news_text">「店主がオススメする日本酒」シリーズ第3段は佐賀特集！「肥前蔵心」「東鶴」「基峰鶴」公開！</p>
             </a>
         </div>
         <div>
             <a>
-                <img class="blog_photo" src="/img/food4-100.jpg" alt="ブログの画像">
+                <img class="blog_photo" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food4-100.jpg?raw=true" alt="ブログの画像">
                 <p class="news_ttl">2022.1.15/ニュース</p>
                 <p class="news_text">「店主がオススメする日本酒」シリーズ第3段は佐賀特集！「肥前蔵心」「東鶴」「基峰鶴」公開！</p>
             </a>
@@ -210,7 +210,7 @@
     <section>
         <div class="contact_wrap">
             <div class="contact_top">
-                <img class="contact_img" src="/img/contact.png" alt="お問い合わせ">
+                <img class="contact_img" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/contact.png?raw=true" alt="お問い合わせ">
                 <p class="contact_ttl">お問い合わせ</p>
             </div>
             <div class="contact_bottom">
@@ -229,7 +229,7 @@
     </section>
     <footer class="footer">
         <div class="information_wrap">
-            <img class="footer_logo" src="/img/shortLogo.png" alt="">
+            <img class="footer_logo" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/shortLogo.png?raw=true" alt="">
             <table class="XXX">
                 <tr>
                     <th>住所</th>
