--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="pc_main_visual_wrap">
+    <header id="top-btn" class="pc_main_visual_wrap">
         <div class="logo_wrap">
             <h1 class="logo"><a href="#"><img src="img/logo.png" alt=""></a></h1>
         </div>
@@ -33,17 +33,17 @@
 
             <nav class="gnav">
                 <ul>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">TOP</span><span
+                    <li class="gnav_list_item"><a href="#top-btn"><span class="ttl">TOP</span><span
                                 class="ttl_ruby">トップページ</span></a></li>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">CONCEPT</span><span
+                    <li class="gnav_list_item"><a href="#concept"><span class="ttl">CONCEPT</span><span
                                 class="ttl_ruby">コンセプト</span></a></li>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">MENU</span><span
+                    <li class="gnav_list_item"><a href="#menu"><span class="ttl">MENU</span><span
                                 class="ttl_ruby">メニュー</span></a></li>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">STAFF</span><span
+                    <li class="gnav_list_item"><a href="#staff"><span class="ttl">STAFF</span><span
                                 class="ttl_ruby">ニュース</span></a></li>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">SHOP INFO</span><span
+                    <li class="gnav_list_item"><a href="#shop"><span class="ttl">SHOP INFO</span><span
                                 class="ttl_ruby">店舗情報</span></a></li>
-                    <li class="gnav_list_item"><a href="#"><span class="ttl">CONTACT</span><span
+                    <li class="gnav_list_item"><a href="#contact"><span class="ttl">CONTACT</span><span
                                 class="ttl_ruby">お問い合わせ</span></a></li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
         <h2 class="h2_ttl_border h2ttl_1margin"><span class="h2_ttl">CONCEPT</span><span
                 class="h2_ttl_inner">コンセプト</span></h2>
     </div>
-    <div class="concept_text_wrap1">
+    <div id="concept" class="concept_text_wrap1">
         <img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food1_6-100.jpg?raw=true" alt="ご飯1">
         <div class="concept_text1_right">
             <p class="concept_text">
@@ -87,7 +87,7 @@
         <h2 class="h2_ttl_border h2ttl_2margin"><span class="h2_ttl">MENU</span><span class="h2_ttl_inner">メニュー</span>
         </h2>
     </div>
-    <div class="paper_wrap">
+    <div id="menu" class="paper_wrap">
         <img class="paper" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_paper.png?raw=true" alt="紙">
         <img class="paper_vertical" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_paper_vertical.png?raw=true" alt="紙">
 
@@ -132,7 +132,7 @@
         <h2 class="h2_ttl_border h2ttl_3margin"><span class="h2_ttl">STAFF</span><span class="h2_ttl_inner">スタッフ</span>
         </h2>
     </div>
-    <div class="d-demo">
+    <div id="staff" class="d-demo">
         <div class="d-demo__wrap">
             <ul class="d-demo__list d-demo__list--left">
                 <li class="d-demo__item">
@@ -184,7 +184,7 @@
         <h2 class="h2_ttl_border h2ttl_4margin"><span class="h2_ttl">NEWS</span><span class="h2_ttl_inner">ニュース</span>
         </h2>
     </div>
-    <div class="news_wrap">
+    <div id="shop" class="news_wrap">
         <div>
             <a>
                 <img class="blog_photo" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/food4-100.jpg?raw=true" alt="ブログの画像">
@@ -208,7 +208,7 @@
         </div>
     </div>
     <section>
-        <div class="contact_wrap">
+        <div id="contact" class="contact_wrap">
             <div class="contact_top">
                 <img class="contact_img" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/contact.png?raw=true" alt="お問い合わせ">
                 <p class="contact_ttl">お問い合わせ</p>
