--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header id="top-btn" class="pc_main_visual_wrap">
         <div class="logo_wrap">
-            <h1 class="logo"><a href="#"><img src="img/logo.png" alt=""></a></h1>
+            <h1 class="logo"><a href="#"><img src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/logo.png?raw=true" alt=""></a></h1>
         </div>
     </header>
     <header>
