--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="slider">
             <div class="slider_item">
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
-                <div class="slider-text">
+                <div class="slider-text" id="slider-text1">
                     <p>
                         1CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
@@ -105,7 +105,7 @@
             </div>
             <div class="slider_item">
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
-                <div class="slider-text">
+                <div class="slider-text" id="slider-text2">
                     <p>
                         2CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
@@ -114,7 +114,7 @@
                     </p>
                 </div>
             </div>
-            <div class="slider_item">
+            <div class="slider_item" id="slider-text3">
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text">
                     <p>
