--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                     </p>
                 </div>
             </div>
-            <div class="slider_item" id="slider-text3">
+            <div class="slider_item">
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
-                <div class="slider-text">
+                <div class="slider-text" id="slider-text3">
                     <p>
                         3CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
