--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text1">
                     <p>
-                        1CAFE STEENの特製ブレンドのコーヒー。<br>
+                        CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
                         妊婦やカフェインが苦手な方にデカフェもご用意。<br>
                         コーヒーはお持ち帰り用のドリップパックもご用意しております。
@@ -107,7 +107,7 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text2">
                     <p>
-                        2CAFE STEENの特製ブレンドのコーヒー。<br>
+                        CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
                         妊婦やカフェインが苦手な方にデカフェもご用意。<br>
                         コーヒーはお持ち帰り用のドリップパックもご用意しております。
@@ -118,7 +118,7 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text3">
                     <p>
-                        3CAFE STEENの特製ブレンドのコーヒー。<br>
+                        CAFE STEENの特製ブレンドのコーヒー。<br>
                         フルーティーな香りとほのかな甘味。<br>
                         妊婦やカフェインが苦手な方にデカフェもご用意。<br>
                         コーヒーはお持ち帰り用のドリップパックもご用意しております。
