--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
     <div class="concept_text_wrap2">
         <div class="concept_text2_left order2">
             <p class="concept_text2">
-                ひとつの日本酒との出会いがきっかけでSLEEPは生まれたと言ってもいいかもしれません。<br>
-                造り手の想いが込められた日本酒には、それだけの魅力が詰まっています。<br>
-                この魅力をより多くの人に伝えられるお店を目指し、<br>
-                全国各地の日本酒をご用意しております。<br>
+                ひとつの日本酒との出会いがきっかけでSLEEPは生まれたと言ってもいいかもしれません。<br class="br-sp">造り手の想いが込められた日本酒には、それだけの魅力が詰まっています。<br class="br-sp">この魅力をより多くの人に伝えられるお店を目指し、<br class="br-sp">全国各地の日本酒をご用意しております。<br class="br-sp">
             </p>
         </div>
         <div class="order1">
