--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text1">
                     <p>
-                        CAFE STEENの特製ブレンドのコーヒー。<br>
-                        フルーティーな香りとほのかな甘味。<br>
-                        妊婦やカフェインが苦手な方にデカフェもご用意。<br>
-                        コーヒーはお持ち帰り用のドリップパックもご用意しております。
+                        CAFE STEENの特製ブレンドのコーヒー。<br class="br-sp">フルーティーな香りとほのかな甘味。<br
+                            class="br-sp">妊婦やカフェインが苦手な方にデカフェもご用意。<br class="br-sp">コーヒーはお持ち帰り用のドリップパックもご用意しております。
                     </p>
                 </div>
             </div>
@@ -107,10 +105,8 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text2">
                     <p>
-                        CAFE STEENの特製ブレンドのコーヒー。<br>
-                        フルーティーな香りとほのかな甘味。<br>
-                        妊婦やカフェインが苦手な方にデカフェもご用意。<br>
-                        コーヒーはお持ち帰り用のドリップパックもご用意しております。
+                        CAFE STEENの特製ブレンドのコーヒー。<br class="br-sp">フルーティーな香りとほのかな甘味。<br
+                            class="br-sp">妊婦やカフェインが苦手な方にデカフェもご用意。<br class="br-sp">コーヒーはお持ち帰り用のドリップパックもご用意しております。
                     </p>
                 </div>
             </div>
@@ -118,10 +114,8 @@
                 <img alt="画像" src="https://github.com/yukusaki2/yukusaki2.github.io/blob/main/menu_drink-100.jpg?raw=true" />
                 <div class="slider-text" id="slider-text3">
                     <p>
-                        CAFE STEENの特製ブレンドのコーヒー。<br>
-                        フルーティーな香りとほのかな甘味。<br>
-                        妊婦やカフェインが苦手な方にデカフェもご用意。<br>
-                        コーヒーはお持ち帰り用のドリップパックもご用意しております。
+                        CAFE STEENの特製ブレンドのコーヒー。<br class="br-sp">フルーティーな香りとほのかな甘味。<br
+                            class="br-sp">妊婦やカフェインが苦手な方にデカフェもご用意。<br class="br-sp">コーヒーはお持ち帰り用のドリップパックもご用意しております。
                     </p>
                 </div>
             </div>
